--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "4.4.6"
   },
   "scripts": {
-    "test": "nightwatch --config nightwatch.conf.js"
+    "test": "nightwatch --config nightwatch.conf.js",
+    "debug": "node --nolazy --inspect-brk=9229 node_modules/nightwatch/bin/runner.js"
   },
   "repository": {
     "type": "git",
