--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 node_modules/
+packages/
 bin/
 obj/
-.vspscc
 npm-debug.log
 nohup.out
 selenium-debug.log
 .DS_Store
-packages/
+.vs/
+*.user
+*.vspscc
 # exclued selenium.jar from GitHub it's 21MB!
 nightwatch
 nightwatch/selenium.jar
@@ -14,7 +16,8 @@ nightwatch/selenium.jar
 # exclude chromedriver as its 12MB and changes frequently!
 nightwatch/chromedriver
 
-reports/
-_reports/
+reports
 screenshots
 .env
+_reports
+
