--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "nightwatch --config nightwatch.conf.js",
+    "testP": "nightwatch --config poseidon.conf.js",
     "debug": "node --nolazy --inspect-brk=9229 node_modules/nightwatch/bin/runner.js"
   },
   "repository": {
